# mcp-study

./: client.py  dev.ipynb  dev_db.ipynb  docker-compose.yml  mcp_client.py  mcp_server.py  pyproject.toml  server.py
package/: get_tools.py
