[project]
name = "mcp-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "broai>=0.1.15",
    "fastapi-mcp>=0.3.4",
    "fastmcp>=2.5.2",
    "ipykernel>=6.29.5",
    "mcp-use>=1.3.0",
    "nest-asyncio>=1.6.0",
    "psycopg2>=2.9.10",
]
